Changes for RS at 8-20

--- a/mas_aa_sample/src/main/res/layout/activity_app_theme_config.xml
+++ b/mas_aa_sample/src/main/res/layout/activity_app_theme_config.xml
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="40"
                     android:layout_marginStart="20dp"
-                    android:text="#3F51B5"
+                    android:text="@color/colorPrimary"
                     android:textColor="@color/white" />
 
             </LinearLayout>
