--- a/mas_aa_sample/src/main/res/layout/activity_home.xml
+++ b/mas_aa_sample/src/main/res/layout/activity_home.xml
@@ -24,43 +24,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="50"
+            android:layout_weight="60"
             android:orientation="vertical"
             android:paddingTop="@dimen/layout_dimen_1"
             android:weightSum="100">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="20"
-                android:background="@color/pattens_blue"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:weightSum="100">
-
-                <TextView
-                    android:id="@+id/acc_no_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="40"
-                    android:paddingStart="@dimen/layout_dimen_10"
-                    android:text="@string/account_no"
-                    android:textColor="@color/shakespeare" />
-
-                <TextView
-                    android:id="@+id/acc_no_value_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="60"
-                    android:paddingStart="@dimen/layout_dimen_10"
-                    android:text=""
-                    android:textColor="@color/shakespeare" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="20"
+                android:layout_weight="15"
                 android:background="@color/alice_blue"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -77,9 +48,9 @@
 
                 <TextView
                     android:id="@+id/acc_name_value_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="240dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="60"
+                    android:layout_weight="40"
                     android:paddingStart="@dimen/layout_dimen_10"
                     android:textColor="@color/shakespeare" />
             </LinearLayout>
@@ -87,24 +58,74 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="20"
+                android:layout_weight="10"
                 android:background="@color/pattens_blue"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="100">
 
                 <TextView
+                    android:id="@+id/acc_no_tv"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="40"
+                    android:paddingStart="@dimen/layout_dimen_10"
+                    android:text="@string/account_no"
+                    android:textColor="@color/shakespeare" />
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"
+                android:background="@color/pattens_blue"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:weightSum="100">
+
+                    <TextView
+                    android:id="@+id/acc_no_value_tv"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="60"
+                    android:paddingStart="@dimen/layout_dimen_10"
+                    android:text=""
+                    android:textColor="@color/shakespeare" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"
+                android:background="@color/alice_blue"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:weightSum="100">
+
+                <TextView
                     android:id="@+id/acc_branch_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="40"
                     android:paddingStart="@dimen/layout_dimen_10"
                     android:text="@string/branch"
                     android:textColor="@color/shakespeare" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="10"
+                    android:background="@color/alice_blue"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:weightSum="100">
 
                 <TextView
                     android:id="@+id/acc_branch_name_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="60"
                     android:paddingStart="@dimen/layout_dimen_10"
@@ -115,7 +136,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="40"
+                android:layout_weight="30"
                 android:background="@color/sr_button"
                 android:gravity="center"
                 android:orientation="horizontal"
