--- a/mas_aa_sample/src/main/res/layout/activity_home.xml
+++ b/mas_aa_sample/src/main/res/layout/activity_home.xml
@@ -202,7 +202,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="50"
-                    android:background="@mipmap/mortgage"
+                    android:background="@mipmap/mortgae"
                     android:padding="@dimen/layout_dimen_10" />
             </LinearLayout>
 
